--- a/Resources/Public/Css/bootstrap5-rte.css
+++ b/Resources/Public/Css/bootstrap5-rte.css
@@ -13673,6 +13673,14 @@ textarea.form-control.error {
   filter: sepia(1);
 }
 
+.frame-space-before {
+  margin-top: var(--frame-outer-spacing-before, 0);
+}
+
+.frame-space-after {
+  margin-bottom: var(--frame-outer-spacing-after, 0);
+}
+
 .frame-space-before-none {
   --frame-outer-spacing-before: var(--frame-outer-spacing-variant-none);
 }
