--- a/Resources/Public/Scss/components/_frame.scss
+++ b/Resources/Public/Scss/components/_frame.scss
@@ -387,6 +387,12 @@ $frame-backgrounds: map-merge(
 //
 // Space
 //
+.frame-space-before {
+    margin-top: var(--frame-outer-spacing-before, 0);
+}
+.frame-space-after {
+    margin-bottom: var(--frame-outer-spacing-after, 0);
+}
 @each $name, $scaling in $frame-outer-spacing-scaling {
     .frame-space-before-#{$name} {
         --frame-outer-spacing-before: var(--frame-outer-spacing-variant-#{$name});
